--- a/ArraysString/ArraysString.csproj
+++ b/ArraysString/ArraysString.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringCS.cs" />
     <Compile Include="TwoDimArr.cs" />
   </ItemGroup>
   <ItemGroup>
